Bug 154061 - CRASH: undoing column insert
Summary: CRASH: undoing column insert
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: high major
Assignee: Paris Oplopoios
URL:
Whiteboard: target:7.6.0 target:7.5.3 target:7.5.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2023-03-08 09:53 UTC by Xisco Faulí
Modified: 2023-03-24 16:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (315.07 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-03-08 09:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-03-08 09:53:54 UTC
Created attachment 185835 [details]
sample document

Steps to reproduce:
1. Open attached document -> I7 is selected.
2. Sheet - Insert Column - Before
3. Undo

-> Crash

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02266202e5e5a97d3c97a3d502c59db884a99901
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-03-08 09:54:55 UTC
Regression introduced by:

author	offtkp <parisoplop@gmail.com>	2022-11-17 16:41:42 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	2022-11-30 14:24:10 +0100
commit 933e045422957e15cad47ef925d4f9a852c826b1 (patch)
tree 1102557670f6c4d578739d6c4b8ab1fc8a2a7ef6
parent e788317bb58f4e4ad3bf57ee7b0e995cb4407ede (diff)
xlsx: Import table column attribute XML_totalsRowFunction

Bisected with: bibisect-linux64-7.5

Adding Cc: to offtkp
Comment 2 Paris Oplopoios 2023-03-08 21:31:54 UTC
I added a patch that seems to fix this issue

https://gerrit.libreoffice.org/c/core/+/148492
Comment 3 Commit Notification 2023-03-16 13:09:33 UTC
Paris Oplopoios committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2135706397d36aa7ea24650b65859be0b6860a65

tdf#154061 Make sure table column attributes size is correct

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-03-16 20:07:21 UTC
Paris Oplopoios committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/858be186f8e83e63e1b3bb1b9c1801760bf5ee48

tdf#154061 Make sure table column attributes size is correct

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2023-03-23 16:38:07 UTC
Paris, please mark this bug as assign, than as Resolved.

I ckecked the bug and I will mark after you as Verified.
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f92721bf182952be88b0349a17e46b684d630c29
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Paris Oplopoios 2023-03-23 22:03:16 UTC
BogdanB, Assigned to me and marked as resolved.
Comment 7 BogdanB 2023-03-24 12:02:55 UTC
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f92721bf182952be88b0349a17e46b684d630c29
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2023-03-24 16:24:37 UTC
Paris Oplopoios committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-2":

https://git.libreoffice.org/core/commit/41ffe9b42bad5085072c94c18fc9b6d17528a7ef

tdf#154061 Make sure table column attributes size is correct

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.