tdf#154061 Make sure table column attributes size is correct

Resize maTableColumnAttributes to match the amount of columns, fixes
crash upon undoing a column insertion on a table

Change-Id: Iad4b8ac5c38d5d1065d6ef1267ce3f5d3b28afa8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148492
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>